# elevation_mapping

./: .gitignore
elevation_mapping/: .gitignore  CMakeLists.txt
elevation_mapping/config/elevation_maps/: long_range.yaml  long_range_global.yaml
elevation_mapping/config/robots/: argos_robot.yaml  hector_tracker_robot.yaml  jasmine_robot.yaml
elevation_mapping/config/sensor_processors/: hokuyo_utm-30lx.yaml
elevation_mapping/config/visualization/: fused_global.yaml
elevation_mapping/include/elevation_mapping/: ElevationMap.hpp  ElevationMapping.hpp
elevation_mapping/launch/: argo_setup.launch  ground_truth_demo.launch  hector_tracker_local_setup.launch  hector_tracker_setup.launch  jasmine_setup.launch  map_combiner_dbg.launch
elevation_mapping/src/: ElevationMap.cpp  ElevationMapping.cpp  odometry_to_pose_with_covariance.cpp  pose_to_pose_with_covariance.cpp
elevation_mapping/src/sensor_processors/: SensorProcessorBase.cpp
elevation_mapping_demos/config/elevation_maps/: long_range.yaml
elevation_mapping_demos/config/visualization/: fused.yaml
elevation_mapping_demos/launch/: ground_truth_demo.launch
ethz_grid_map_proc/: CMakeLists.txt  package.xml
ethz_grid_map_proc/cfg/: GridMapProc.cfg
ethz_grid_map_proc/src/: grid_map_to_occupancy_grid_node.cpp
map_combiner/: CMakeLists.txt  CMakeLists.txt.user.d9360d4  package.xml
map_combiner/cfg/: MapCombiner.cfg  MapCombiner.yaml
map_combiner/launch/: map_combiner.launch
map_combiner/src/: map_combiner.cpp  map_combiner_node.cpp
pose_to_pose_with_covariance/: CMakeLists.txt
(+3 files in other folders)
